# h5pyd

./: .gitignore  .travis.yml  COPYING  Dockerfile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  run_docker.sh  setup.cfg  setup.py  testall.py
.devcontainer/: devcontainer.json  docker-compose.yaml  requirements.txt
.github/workflows/: main.yml
.hsds/config/: override.yml
apps/: chunkiter.py  config.py  h5ls.py  hsacl.py  hsdel.py  hsget.py  hsinfo.py  hsload.py  hsls.py  hstouch.py  utillib.py
docs/: Makefile  conf.py  config.rst  contributing.rst  faq.rst  index.rst  licenses.rst  quick.rst  requirements-docs.txt  swmr.rst
docs/high/: attr.rst  dataset.rst  dims.rst  file.rst  group.rst
docs/whatsnew/: 0.9.0.rst  index.rst
examples/: check_last_scan.py  dump_dsets.py  h5ls.py  multi_mgr_benchmark.py  mwmr_multiprocess.py  read_example.py  readdatacube.py  swmr_multiprocess.py  write_example.py  writedatacube.py  writedatacube_compress.py
examples/notebooks/: anonymous_obj.ipynb  compound_type_example.ipynb  fancy_selection.ipynb  h5image_example.ipynb  multi_manager_example.ipynb  read_nrel_nsrdb.ipynb  swmr_example.ipynb  tasmax.ipynb
h5pyd/: __init__.py  config.py  h5ds.py  h5type.py  h5type_test.py  hsds_reader.py  hsds_writer.py  httpconn.py  objdb.py  objectid.py  openid.py  serverinfo.py  version.py
h5pyd/_apps/: __init__.py  chunkiter.py  config.py  hsacl.py  hsconfigure.py  hscopy.py  hsdel.py  hsdiff.py  hsget.py  hsinfo.py  hsload.py  hsls.py  hsmv.py  hsstat.py  hstouch.py  utillib.py
h5pyd/_hl/: __init__.py  acls.py  attrs.py  base.py  config.py  dataset.py  datatype.py  dims.py  files.py  filters.py  folders.py  group.py  h5commands.py  h5type.py  h5type_test.py  hsdsapp.py  httpconn.py  httputil.py  objdb.py  objectid.py  openid.py  requests_lambda.py  selections.py  serverinfo.py  table.py
h5pyd/_plugins/: hsds_reader.py  hsds_writer.py  httpconn.py  openid.py
test/: common.py  config.py  test_attribute.py  test_committedtype.py  test_complex_numbers.py  test_dataset_compound.py  test_dataset_create.py  test_dataset_extend.py  test_dataset_fancyselect.py  test_dataset_getitem.py  test_dataset_objref.py  test_dataset_pointselect.py  test_dataset_query.py  test_dataset_scalar.py  test_dataset_setitem.py  test_dimscale.py  test_file.py  test_folder.py  test_group.py  test_objref.py  test_table.py  test_visit.py  test_vlentype.py
(+39 files in other folders)
